--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,22 @@
+.home{
+    color: white;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
 
+#home h3{
+    color: rgb(134, 134, 134);
+}
+.profile{
+    margin:auto;
+}
 .profileImage {
-    border-radius: 200px;
-    height: 200px;
-    width: 200px;
+    border-radius: 100px;
+    height: 180px;
+    width: 180px;
     border: 3px solid  white;
+    margin-bottom: 1rem;
 }
