--- a/src/css/about.css
+++ b/src/css/about.css
@@ -12,11 +12,12 @@
 .aboutContent{
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 .aboutInfo{
     height: 70vh;
-    padding-top: 15%;
 }
 
 .aboutTitle{
@@ -38,7 +39,6 @@
 }
 
 .aboutImage{
-    margin-top: 10vh;
     height: 80vh;
     border-radius: 100px;
     object-fit: cover;
