--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -3,6 +3,6 @@
     color: black;
     background-color: white;
     width: 100%;
-    min-height: 100vh;
     padding-top: 10vh;
+    padding-bottom: 10vh;
 }
