--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-    background: rgb(46, 35, 43);
+    background: white;
     font-family: 'Lato',sans-serif;
     color:white;
     height: 100vh;
