--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -3,6 +3,44 @@
     color: black;
     background-color: white;
     width: 100%;
-    padding-top: 10vh;
     padding-bottom: 10vh;
+}
+#portfolio a{
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+#portfolio p{
+    text-align: center;
+}
+
+.project{
+    width: 336px;
+    height: 339px;
+    padding: 0;
+    margin: 0;
+    color:black;
+    transition: transform .2s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.project:hover{
+    color: black;
+    transform: scale(1.03);
+    box-shadow: 0px 0px 5px 4px rgb(199, 196, 196);
+    z-index: 1;
+}
+
+.projectImage{
+    width: 336px;
+    height: 189px;
+}
+
+.projectDescription{
+    height: 150px;
+    width: 336px;
+    background-color: rgb(245, 245, 245);
+    padding: 10px 30px;
+    display: flex;
+    justify-content: center;
 }
