--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,3 +8,10 @@ body{
     color:white;
     height: 100vh;
 }
+
+.parallax{
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
