--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ body{
 .parallax{
     background-image: url(../images/toronto.jpg);
     background-attachment: fixed;
-    background-position: -70% 0%;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
