--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -26,3 +26,17 @@
     border-radius: 100px;
     object-fit: cover;
 }
+
+@media (max-width: 1200px){
+    .contactLinks{
+        color: rgb(134, 134, 134);
+        text-decoration: none;
+        font-size: 1.2rem;
+    }
+    .contact h1 strong{
+        font-size: 1.5rem;
+    }
+    .contact h4{
+        font-size: 1.2rem;
+    }
+}
