--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -16,17 +16,32 @@
 }
 
 .navbar.scrolled{
-    background: rgb(36, 27, 33, 0.95);
-    background: white;
+    color:black;
+    background: rgb(255, 255, 255, 0.95);
     padding-top: 0px;
     padding-bottom: 0px;
     border-bottom: 1px solid rgb(240, 240, 240);;
-    transition: padding 1000ms, background 1000ms, border 1000ms;
+    transition: all 500ms;
 }
 
 .navbar.unscrolled{
-    background: rgb(46, 35, 43);
-    padding-top: 16px;
-    padding-bottom: 16px;
-    transition: padding 1000ms, background 1000ms;
+    background: none;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    transition: all 500ms;
+}
+
+.disappear{
+    display: none;
+}
+
+.changeRed{
+    color:rgb(100, 100, 100);
+}
+
+#mainNavbar .textColour{
+    color: black;
+}
+#mainNavbar .textColour:hover{
+    color: rgb(128, 3, 3);
 }
