--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,6 +1,6 @@
 .contact{
     background-color: white;
-    color: rgb(134, 134, 134);
+    color: black;
     text-align: center;
     font-size: 1.3rem;
 }
@@ -10,14 +10,14 @@
 }
 
 .contactLinks{
-    color: rgb(134, 134, 134);
+    color: black;
     text-decoration: none;
     font-size: larger;
 }
 
 .contactLinks:hover{
     color: rgb(128, 3, 3);
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .contactImage{
@@ -27,9 +27,13 @@
     object-fit: cover;
 }
 
+.contactLinkDetail{
+    color:rgb(128, 3, 3);
+}
+
 @media (max-width: 1200px){
     .contactLinks{
-        color: rgb(134, 134, 134);
+        color: black;
         text-decoration: none;
         font-size: 1.2rem;
     }
