Few minor tests

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 .footer{
     color:rgb(134, 134, 134);
-    text-align: right;
+    text-align: center;
     vertical-align: middle;
     margin-bottom: 1rem;
 }
