--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,8 +1,8 @@
 .contact{
     background-color: white;
-    color: black;
+    color: rgb(134, 134, 134);
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 
 #contact h1{
@@ -10,7 +10,7 @@
 }
 
 .contactLinks{
-    color: black;
+    color: rgb(134, 134, 134);
     text-decoration: none;
     font-size: larger;
 }
@@ -33,7 +33,6 @@
 
 @media (max-width: 1200px){
     .contactLinks{
-        color: black;
         text-decoration: none;
         font-size: 1.2rem;
     }
