--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,23 @@ body{
     height: 100vh;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar:hover {
+    width: 15px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgb(134, 134, 134);
+    border-radius: 20px;
+}
+  
+body::-webkit-scrollbar-track {
+    background: rgb(100, 100, 100);
+}
+
 .parallax{
     background-image: url(../images/toronto.jpg);
     background-attachment: fixed;
