--- a/src/css/about.css
+++ b/src/css/about.css
@@ -16,6 +16,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .aboutTitle{
@@ -40,6 +42,7 @@
     height: 80vh;
     border-radius: 100px;
     object-fit: cover;
-    width: 90%;
-    margin-left: 10%;
+    margin-left: 5%;
+    max-width: 95%;
+    max-height: 80%;
 }
