--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,5 @@
 .about{
-    height: 100%;
+    overflow: auto;
     width: 100%;
     background-color: white;
     color: black;
@@ -12,7 +12,7 @@
 
 .aboutContent{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
