--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,8 +1,13 @@
 .contact{
+    min-height: 100vh;
+    overflow: auto;
+    width: 100%;
     background-color: white;
     color: rgb(134, 134, 134);
     text-align: center;
     font-size: 1.1rem;
+    display: flex;
+    align-items: center;
 }
 
 #contact h1{
