Animation on nav item hover added

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -33,7 +33,8 @@
     height: 80vh;
     border-radius: 100px;
     object-fit: cover;
-    max-width: 100%;
+    max-width: 95%;
+    max-height: 80%;
 }
 
 .contactLinkDetail{
